# bevy_fog_of_war

./: Cargo.toml
examples/: playground.rs  simple_2d.rs
src/: components.rs  data_transfer.rs  lib.rs  managers.rs  persistence.rs  persistence_utils.rs  snapshot.rs
src/render/: compute.rs  extract.rs  mod.rs  overlay.rs  prepare.rs  transfer.rs
