[package]
name = "bevy_fog_of_war"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["ZoOL <zhooul@gmail.com>"]
description = "A 2D fog of war plugin for Bevy"
homepage = "https://crates.io/crates/bevy_fog_of_war"
documentation = "https://docs.rs/bevy_fog_of_war"
repository = "https://github.com/foxzool/bevy_fog_of_war"
keywords = ["bevy", "game", "plugin"]
categories = ["game-development"]
readme = "README.md"

[dependencies]
bevy_app = { version = "0.18" }
bevy_asset = { version = "0.18" }
bevy_core_pipeline = { version = "0.18" }
bevy_color = { version = "0.18" }
bevy_derive = { version = "0.18" }
bevy_image = { version = "0.18" }
bevy_ecs = { version = "0.18" }
bevy_log = { version = "0.18" }
bevy_math = { version = "0.18" }
bevy_platform = { version = "0.18" }
bevy_reflect = { version = "0.18" }
bevy_render = { version = "0.18" }
bevy_camera = { version = "0.18" }
bevy_time = { version = "0.18" }
bevy_transform = { version = "0.18" }



bytemuck = { version = "1.22.0", features = ["derive"] }
async-channel = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

# Optional compression dependencies
flate2 = { version = "1.0", optional = true }
lz4 = { version = "1.28", optional = true }
zstd = { version = "0.13", optional = true }

# Optional serialization format dependencies
rmp-serde = { version = "1.3", optional = true }
bincode = { version = "2.0", optional = true, features = ["serde"] }

[features]
default = ["format-bincode"]
compression-gzip = ["flate2"]
compression-lz4 = ["lz4"]
compression-zstd = ["zstd"]
all-compression = ["compression-gzip", "compression-lz4", "compression-zstd"]
format-json = ["serde_json"]
format-messagepack = ["rmp-serde"]
format-bincode = ["bincode"]
all-formats = ["format-json", "format-messagepack", "format-bincode", "all-compression"]

[dev-dependencies]
bevy = { version = "0.18" }
#bevy-inspector-egui = { version = "0.31" }


[[example]]
name = "playground"

[[example]]
name = "simple_2d"

[profile.ci]
inherits = "dev"
opt-level = 0
debug = false

[profile.web]
inherits = "dev"
opt-level = "z"
